try to fixed button overflow

--- a/assets/scss/layout/header/_header.scss
+++ b/assets/scss/layout/header/_header.scss
@@ -97,7 +97,7 @@
   &__button-wrapper{
     display: flex;
     flex-direction: column;
-    margin: 2rem 0; 
+    margin: 8rem 0; 
     padding: 0 10px;
     gap: 0.5rem;
 
